--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.7.1",
